--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dx-toolkit (0.339.0) trusty; urgency=medium
+
+  * No significant changes
+
+ -- Kurt Jensen <kjensen@dnanexus.com>  Fri, 27 Jan 2023 17:32:58 +0000
+
 dx-toolkit (0.338.0) trusty; urgency=medium
 
   * Added: Support for Granular Spot wait times in dx run using --max-tree-spot-wait-time and --max-job-spot-wait-time
