--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
+dx-toolkit (0.338.1) trusty; urgency=medium
+
+  * No significant changes
+
+ -- Kurt Jensen <kjensen@dnanexus.com>  Fri, 27 Jan 2023 17:33:30 +0000
+
 dx-toolkit (0.338.0) trusty; urgency=medium
 
   * Added: Support for Granular Spot wait times in dx run using --max-tree-spot-wait-time and --max-job-spot-wait-time
   * Added: Printing of Spot wait times in dx describe for jobs and workflows
-  * Added: Support for private Docker images in Nextflow pipelines on subjob level
-  * Fixed: How dx get database command reads from the API server with the API proxy interceptor
+  * Added: Support for private Docker images in Nextflow pipelines on subjob le  * Fixed: How dx get database command reads from the API server with the API proxy interceptor
   * Fixed: Regex global flags in path matching to support Python 3.11
   * Fixed: dx run --clone for Nextflow jobs (clear cloned job's properties)
   * Changed: Upgraded Nextflow plugin version to 1.5.0
