--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+dx-toolkit (0.346.0) trusty; urgency=medium
+
+  * Fixed: Released Nextaur 1.6.6. It includes fixes to errorStrategy handling and an update to the way AWS instance types are selected based on resource requirements in Nextflow pipelines (V2 instances are now preferred)
+  * Fixed: ImportError in test_dxpy.py
+  * Fixed: Replaced obsolete built-in file() method with open()
+  * Fixed: Printing HTTP error codes and messages that were hidden
+  * Changed: Help message of the dx make_download_url command
+
+ -- Kurt Jensen <kjensen@dnanexus.com>  Thu, 13 Apr 2023 14:00:12 +0000
+
 dx-toolkit (0.345.0) trusty; urgency=medium
 
   * Fixed: Tab completion in interactive execution of dx-app-wizard
