--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dx-toolkit (0.347.0) trusty; urgency=medium
+
+  * Changed: Removed unneeded gnureadline dependency
+  * Changed: Bumped allowed colorama version to 0.4.6
+  * Fixed: Removed unused rlcompleter import which may break alternative readline implementations
+
+ -- Kurt Jensen <kjensen@dnanexus.com>  Thu, 20 Apr 2023 16:28:33 +0000
+
 dx-toolkit (0.346.0) trusty; urgency=medium
 
   * Fixed: Released Nextaur 1.6.6. It includes fixes to errorStrategy handling and an update to the way AWS instance types are selected based on resource requirements in Nextflow pipelines (V2 instances are now preferred)
