--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dx-toolkit (0.351.0) trusty; urgency=medium
+
+  * No significant changes
+
+ -- Kurt Jensen <kjensen@dnanexus.com>  Fri, 23 Jun 2023 17:14:34 +0000
+
 dx-toolkit (0.350.0) trusty; urgency=medium
 
   * Added: `dx watch` support for detailed job metrics (cpu, memory, network, disk io, etc every 60s)
