--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dx-toolkit (0.359.0) trusty; urgency=medium
+
+  * Added: `dx create_cohort`
+  * Added: Nextflow pipeline readme file is used as a readme file of Nextflow applet
+  * Added: Default optional inputs nextflow_soft_confs and nextflow_params_file to Nextflow applets to support soft configuration override and custom parameters file in nextflow run
+
+ -- Kurt Jensen <kjensen@dnanexus.com>  Fri, 22 Sep 2023 19:33:04 +0000
+
 dx-toolkit (0.358.0) trusty; urgency=medium
 
   * Fixed: `dx find org projects --property` in Python 3
