--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dx-toolkit (0.360.0) trusty; urgency=medium
+
+  * Fixed: Released Nextaur 1.6.7. It adds DNAnexus docker image support feature and contains errorStrategy bugfixes
+
+ -- Kurt Jensen <kjensen@dnanexus.com>  Fri, 29 Sep 2023 15:23:46 +0000
+
 dx-toolkit (0.359.0) trusty; urgency=medium
 
   * Added: `dx create_cohort`
