--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dx-toolkit (0.362.0) trusty; urgency=medium
+
+  * Added: archival_state param to find_data_objects()
+
+ -- Kurt Jensen <kjensen@dnanexus.com>  Sat, 21 Oct 2023 12:20:15 +0000
+
 dx-toolkit (0.361.0) trusty; urgency=medium
 
   * Added: --fields-file argument in dx extract_dataset
